- Make functionality to add abstracts to Submission List page - Change CSS to remove white space at bottom of pages - Fix service file issues with newSubmission files

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -5,6 +5,7 @@
     color: mat-color($accent) !important;
 }
 
-body {
+html, body {
     background-color: #efefef;
 }
+
